update homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http:/rupert0603/redux-resto",
+  "homepage": "http:/rupert0603.github.io/redux-resto",
   "name": "template",
   "version": "0.1.0",
   "private": true,
